--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@gridsome/remark-prismjs": "^0.0.4",
     "@gridsome/source-filesystem": "^0.3.0",
     "@gridsome/transformer-remark": "^0.2.0",
-    "gridsome": "^0.5.0"
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.21",
+    "gridsome": "^0.5.0",
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "node-sass": "^4.11.0",
